@@ -146,6 +146,12 @@ class DeviceOnPrem
     /** @var RuleStore */
     public $dosRules;
 
+    /** @var RuleStore */
+    public $tunnelInspectionRules;
+
+    /** @var RuleStore */
+    public $defaultSecurityRules = null;
+
     /** @var ZoneStore */
     public $zoneStore = null;
 
@@ -270,6 +276,12 @@ class DeviceOnPrem
 
         $this->dosRules = new RuleStore($this, 'DoSRule');
         $this->dosRules->name = 'DoS';
+
+        $this->tunnelInspectionRules = new RuleStore($this, 'TunnelInspectionRule', TRUE);
+        $this->tunnelInspectionRules->name = 'TunnelInspection';
+
+        $this->defaultSecurityRules = new RuleStore($this, 'DefaultSecurityRule', TRUE);
+        $this->defaultSecurityRules->name = "DefaultSecurity";
 
         #$this->dosRules->_networkStore = $this->owner->network;
         #$this->pbfRules->_networkStore = $this->owner->network;
@@ -727,6 +739,28 @@ class DeviceOnPrem
                 $tmprulesroot = DH::findFirstElement('rules', $tmproot);
                 if( $tmprulesroot !== FALSE )
                     $this->dosRules->load_from_domxml($tmprulesroot);
+            }
+
+            //
+            // tunnelinspection Rules extraction
+            //
+            $tmproot = DH::findFirstElement('tunnel-inspect', $this->rulebaseroot);
+            if( $tmproot !== FALSE )
+            {
+                $tmprulesroot = DH::findFirstElement('rules', $tmproot);
+                if( $tmprulesroot !== FALSE )
+                    $this->tunnelInspectionRules->load_from_domxml($tmprulesroot);
+            }
+
+            //
+            // defaultSecurity Rules extraction
+            //
+            $tmproot = DH::findFirstElement('default-security-rules', $this->rulebaseroot);
+            if( $tmproot !== FALSE )
+            {
+                $tmprulesroot = DH::findFirstElement('rules', $tmproot);
+                if( $tmprulesroot !== FALSE )
+                    $this->defaultSecurityRules->load_from_domxml($tmprulesroot);
             }
         }
     }
